# otc-functiongraph-python-runtime

./: .gitignore  README.md  requirements-test.txt  tox.ini
.github/workflows/: publishGitHubPages.yml
doc/: requirements.txt
doc/doc-utils/: README.md
doc/doc-utils/src/: createLibraryDocs.py  index.py
doc/source/: conf.py  index.rst
fg-events/: README.md  pyproject.toml  setup.py
fg-events/fg-apig-event/: README.md  pyproject.toml  setup.py
fg-events/fg-cts-event/: README.md  pyproject.toml  setup.py
fg-events/fg-dds-event/: README.md  pyproject.toml  setup.py
fg-events/fg-dms4kafka-event/: README.md  pyproject.toml  setup.py
fg-events/fg-dms4kafka-event/src/fg_dms4kafka_event/: __init__.py  dms4kafkaevent.py
fg-events/fg-dms4kafka-event/tests/: test_dms4kafkaevent.py
fg-events/fg-dms4rocketmq-event/: README.md  pyproject.toml  setup.py
fg-events/fg-kafkaopensource-event/: README.md  setup.py
fg-events/fg-lts-event/: README.md  pyproject.toml  setup.py
fg-events/fg-obss3-event/: README.md  pyproject.toml  setup.py
fg-events/fg-obss3-event/src/fg_obss3_event/: __init__.py  obss3event.py
fg-events/fg-obss3-event/tests/: test_obss3event.py
fg-events/fg-smn-event/: README.md  pyproject.toml  setup.py
fg-events/fg-timer-event/: README.md  pyproject.toml  setup.py
fg-runtime/: README.md  pyproject.toml  setup.py
fg-runtime/tests/: test_context.py  test_logger.py
fn-runtime/: pyproject.toml  setup.py
samples-doc/container-event-flask/: Dockerfile  Makefile  entrypoint.sh
samples-doc/container-http-fastapi/: .dockerignore  Dockerfile  Makefile  entrypoint.sh  requirements.txt
samples-doc/dependency-api-sign-sdk/: Makefile  README.md  requirements.txt  sample_fg.py
samples-doc/dependency-fg-events/: Makefile  README.md  requirements.txt
samples-doc/deploy-from-obs/: Makefile  README.md
samples-doc/deploy-from-zip/: Makefile  README.md
samples-doc/event-obss3-thumbnail/: Makefile  README.md  requirements.txt
samples-doc/event-sdk-ecs/: Makefile  README.md  requirements.txt
samples-doc/event-sdk-obs/: README.md  requirements.txt
samples-doc/invoke-fg/: README.md  requirements.txt
samples-doc/invoke-fg2fg/: README.md
samples-doc/invoke-fg2fg-token/: README.md
samples-doc/scratch-event/: Makefile  README.md
samples-doc/scratch-event-apig/: Makefile  README.md  pyproject.toml  requirements.txt  setup.py
samples-doc/scratch-event-apig/resources/: apig_event.json  apig_event_json.json  apig_event_json_b64.json
samples-doc/scratch-event-apig/src/: index.py
samples-doc/scratch-event-apig/terraform/: api_trigger.tf  function.tf  testevent.tf  variables.tfvars
samples-doc/scratch-event-apig/tests/: test_handler.py
samples-doc/scratch-event-cts/: README.md  requirements.txt
samples-doc/scratch-event-dds/: README.md  requirements.txt
samples-doc/scratch-event-dms4kafka/: README.md  requirements.txt
samples-doc/scratch-event-dms4rocketmq/: requirements.txt
samples-doc/scratch-event-kafkaopensource/: Makefile  README.md  requirements.txt
samples-doc/scratch-event-lts/: README.md  requirements.txt
samples-doc/scratch-event-obs/: README.md  requirements.txt
samples-doc/scratch-event-smn/: README.md  requirements.txt
samples-doc/scratch-event-timer/: Makefile  README.md  requirements.txt
samples-doc/scratch-http/: Makefile  bootstrap
samples-doc/scratch-http-flask/: Makefile  README.md  bootstrap
utils/: createZip.py  tokenFromUsername.sh
(+187 files in other folders)
